examples/access-error/tests/access-error.en.submission
public class B {
    private static A a;
}
